--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -3,6 +3,7 @@
  * bundles Infima by default. Infima is a CSS framework designed to
  * work well for content-centric websites.
  */
+@import 'vazirmatn/Vazirmatn-font-face.css';
 
 /* You can override the default Infima variables here. */
 :root {
@@ -15,6 +16,9 @@
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-font-family-base: 'Vazirmatn', system-ui, -apple-system, BlinkMacSystemFont,
+  'Segoe UI', sans-serif;
+    --btn-border-color: #000000;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -27,6 +31,7 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+    --btn-border-color: var(--ui-primary);
 }
 
 .left-to-right {
