--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -38,3 +38,11 @@
     direction: ltr;
     text-align: left;
 }
+
+.center_images {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    text-align: center;
+}
