feat(landing): update sidebar, landing page, and config

--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -29,7 +29,7 @@
 
 
 .authorSection {
-    background-color: var(--ifm-color-emphasis-100);
+    /*background-color: var(--ifm-color-emphasis-100);*/
     padding: 1rem 0;
 }
 
