--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -46,3 +46,18 @@
     width: 100%;
     text-align: center;
 }
+
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    text-align: center;
+}
+
+.flex-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; /* Centers horizontally */
+    align-items: center;     /* Centers vertically (requires div height) */
+}
